src/snapshots/claptrap__tests__arg_group__args.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag='true'
claptrap_color='false'
