src/snapshots/claptrap__tests__arg_group__id.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_foo='true'
claptrap_bar='false'
